--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,6 @@
       </template>
     </dl>
     </div>
-    <script src="index.js"></script>
+    <script src="../src/index.js"></script>
   </body>
 </html>
