Adding more to the frontend and update on gitignore

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Coffee Bean Therapy</title>
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  </head>
-  <body>
-    <div id="app">
-      <dl>
-        <template v-for="product in products">
-        <dt> {{ product.productName }} </dt>
-        <dd> {{ product.brand }} </dd>
-        <dd> {{ product.roasting }} </dd>
-        <dd> {{ product.price }} </dd>
-        <dd> {{ product.description }} </dd>
-        </template>
-      </dl>
-    </div>
-    <script src="../src/index.js"></script>
-  </body>
+
+   <head>
+      <meta charset="utf-8">
+      <meta content="width=device-width, initial-scale=1" name="viewport">
+      <title>Coffee Bean Therapy</title>
+      <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
+   </head>
+
+   <body>
+      <div id="app">
+
+      </div>
+      <script src="bundle.js"></script>
+   </body>
+
 </html>
